--- a/tweejump/Resources/Info.plist
+++ b/tweejump/Resources/Info.plist
@@ -28,6 +28,7 @@
 	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.iplayful.tweejump</string>
+	<string>com.appsnonoobs.planetzool</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
