--- a/SpaceJump/SpaceJump-Info.plist
+++ b/SpaceJump/SpaceJump-Info.plist
@@ -20,7 +20,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>AppsNoNoobs.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.AppsNoNoobs.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
