--- a/SpaceJump/SpaceJump-Info.plist
+++ b/SpaceJump/SpaceJump-Info.plist
@@ -16,7 +16,11 @@
 			<array>
 				<string>icon57x57.png</string>
 				<string>icon114x114.png</string>
+				<string>57_x_57.png</string>
+				<string>114_x_114.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -37,6 +41,8 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
